--- a/package.json
+++ b/package.json
@@ -6,20 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
     "@heroicons/react": "^2.1.3",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@vercel/postgres": "^0.8.0",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "debounce": "^2.0.0",
+    "dotenv": "^16.4.5",
+    "flowbite": "^2.3.0",
     "lucide-react": "^0.368.0",
+    "mongodb": "^6.5.0",
+    "mysql2": "^3.9.4",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "serverless-mysql": "^1.5.5",
+    "svix": "^1.21.0",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
