--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.3",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@uploadthing/react": "^6.4.4",
     "@vercel/postgres": "^0.8.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
@@ -32,7 +33,9 @@
     "svix": "^1.21.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.0"
+    "uploadthing": "^6.9.0",
+    "use-debounce": "^10.0.0",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
